--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mysql-connector-python-stubs"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["Nils Olsson <nilso@enosis.net>"]
 packages = [
@@ -8,9 +8,12 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
+pylama = "^8.4.1"
+black = "^22.6.0"
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
